2013-03-15  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/file-event.7: Simplify language.
	* extra/upstart-file-bridge.c:
	  - skip_slashes(): New macro to make path matching more reliable.
	  - file_filter(): Call skip_slashes().
	  - create_handler(): Call skip_slashes().
	  - modify_handler(): Call skip_slashes().
	  - delete_handler(): Call skip_slashes().
	  - watched_dir_new(): Special case watching the root directory.
	* extra/conf/upstart-file-bridge.conf: Change start on condition
	  to ensure all filesystems are mounted before it starts.

2013-03-11  James Hunt  <james.hunt@ubuntu.com>

	* extra/Makefile.am: Add file bridge and conf file.
	* extra/upstart-file-bridge.c: Inotify file bridge.
	* extra/conf/upstart-file-bridge.conf: Conf file for
	  file bridge.
	* extra/man/file-event.7: New man page.
	* extra/man/upstart-file-bridge.8: New man page.

2013-03-04  James Hunt  <james.hunt@ubuntu.com>

	* init/session.c: session_from_dbus(): Fixed off-by-one
	  readlink error.
	* configure.ac: Only add sbin to path if exec_prefix specified
	  (LP: #1122510).
	* NEWS: Release 1.7
	* configure.ac (NIH_COPYRIGHT): Update

2013-02-27  James Hunt  <james.hunt@ubuntu.com>

	* Removal of gcc 'malloc' function attribute resulting from
	  a clarification in its description which makes its use invalid.
	  (LP: #1123588).

2013-02-26  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c: test_upstart_open(): Unset
	  UPSTART_SESSION to avoid session-init environment affecting
	  test run.

2013-02-15  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c:
	  - timed_waitpid(): Back off if no status change.
	  - test_quiesce():
	    - Set XDG_RUNTIME_DIR to a temporary value.
	    - Remove stale session files.
	  - test_job_env(): Remove stale session files.

2013-02-15  James Hunt  <james.hunt@ubuntu.com>

	* init/event_operator.c: Typo.
	* init/job_class.c:
	  - job_class_environment_reset(): Comments.